data/derived/comb/progs/unify/prog5706.ml.out
Characters 89-93:
  | Sine(e1) -> sin(e1);;
                   ^^^^
Error: This expression has type expr but an expression was expected of type
         float
